<resources>
    <string name="app_name">AIHMultisportWeekendApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="registration">Registration </string>
    <string name="what_to_bring">What to Bring? </string>
    <string name="faq">FAQs </string>
    <string name="ace_name">Ace In the Hole</string>
    <string name="ace_sndpart_name">MultiSport Weekend</string>
    <string name="saturday">Saturday</string>
    <string name="sat_date">12/16/2017</string>
    <string name="sunday">Sunday</string>
    <string name="sun_date">12/17/2017</string>
    <string name="long_course">Long Course</string>
    <string name="olympic">Olympic</string>
    <string name="ten_k">10 K</string>
    <string name="half_marathon">Half Marathon</string>
    <string name="sprint">Sprint</string>
    <string name="try_a_tri">Try-a-Tri</string>
    <string name="splash_n_dash">Splash n Dash</string>
    <string name="begin">Let the Fun Begin</string>
    <string name="title_events">Choose one you are interested:</string>
    <string name="things_to_know">Thing You May Want to Know</string>
    <string name="form_text">Please choose</string>
    <string name="register">Register</string>
    <string name="volunteer">Volunteer</string>
    <string name="first_name">First Name: *</string>
    <string name="last_name">Last Name: *</string>
    <string name="email">Email Address: *</string>
    <string name="phone_number">Phone Number: *</string>
    <string name="emergency_contact">Emergency Contact: </string>
    <string name="full_name">Full Name: *</string>
    <string name="comment">Comment:</string>
    <string name="comment_hint">Please Enter Your Comments or Questions Here:</string>
    <string name="send_request">Send Request</string>
    <string name="note_text">Note:</string>
    <string name="cost">Cost: </string>
    <string name="swim">Swim: </string>
    <string name="bike">Bike: </string>
    <string name="run">Run: </string>
    <string name="half_marathon_text">(13.1-miles): Half-Marathon event starts and finishes in the Athletes Village to the cheers of the enthusiastic crowd. Once finished, runners can enjoy the finish line festivities, including the Sports and Fitness Expo and live entertainment. Post-race refreshments will be provided and the Awards Ceremony for the Half-Marathon will begin once the results have been certified</string>
    <string name="long_course_swim_text">1.2mi - Participants will make two counter-clockwise loops. Large buoys will mark the turn points. Kayakers will be positioned on the water to support the swimmers. Medical support will be present on the beach.</string>
    <string name="long_course_bike_text">58 Miles: A scenic point-to-point course that travels over gently rolling hills prior to three hard climbs. The bike course will be marked with large directional signage and there will be course marshals at key intersections to help direct you.</string>
    <string name="long_course_run_text">13.1mi - A mostly flat loop course on widely paved bike paths that traverse through and around this beautiful and scenic destination resort (two hills total with a minimal elevation gain).</string>
    <string name="olympic_swim_text">1,500 meters - Participants will make two counter-clockwise loops. Large buoys will mark the turn points. Kayakers will be positioned on the water to support the swimmers. Medical support will be present on the beach.</string>
    <string name="olympic_bike_text">28mi - A scenic point-to-point course that travels over gently rolling hills. The bike course will be marked with large directional signage and course marshals will be present at key intersections.</string>
    <string name="olympic_run_text">10K - A mostly flat loop course on widely paved bike paths that traverse through and around this beautiful and scenic destination resort (one hill total with a minimal elevation gain).</string>
    <string name="sprint_swim_text">Course will offer a 1-loop &#189; mile swim</string>
    <string name="splash_n_dash_swim_text">Course will offer a 100 yard swim for kids 10 and under.</string>
    <string name="free_of_charge">FREE IF PARENT REGISTERS EVENT </string>
    <string name="splash_n_dash_run_text">Course will offer 50 yard dash for kids 10 and under.</string>
    <string name="sprint_bike_text">Course will offer a the exact same 28 mile Bike Course as the Olympic distance</string>
    <string name="sprint_run_text">Course will offer a a 5km run.</string>
    <string name="tenk_k_run_text">The 10K event starts and finishes in the Athletes Village. The paths are approximately 6 ft wide, perfectly paved and wind around through the forest. Each course has only two small hills with a minimal elevation gain to navigate and a fast downhill to flat finish to the roaring cheers of the crowd.</string>
    <string name="try_a_tri_swim_text">This novice race is designed for the first time triathlete, those new to the sport, our Junior Triathletes. The swim is a shorter, more manageable &#188; mile distance, (instead of the standard &#189;-mile Sprint distance swim).</string>
    <string name="try_a_tri_bike_text">10 mile bike ride (vs 12 miles and it\'s a 2 loop course making it very spectator friendly!).</string>
    <string name="try_a_tri_run_text">A flat 2 mile run (vs 3 mile sprint course).</string>
    <string name="what_to_bring_intro_text">Watch the weather closely. The show goes on no matter what the weather is doing. You must wear your chip timing piece during the entire event. You will be given a band that will hold your chip timing piece around your ankle throughout the entire event. Be sure that it is snapped tightly. Be sure to have your Chip Timing piece on before you start the race and be sure to step over the timing mats after each segment of the race. If you are wearing a wet-suit, make sure the timing piece goes under your wetsuit otherwise, you will have a very difficult time getting off your wet suit.</string>
    <string name="what_to_bring_swim_text">Wetsuits are optional for the swim but will provide buoyancy and warmth. However, many people opt for no wetsuit for a triathlon so no worries. We will provide you with a swim cap but you will want to bring your own goggles.</string>
    <string name="what_to_bring_bike_text">A biking helmet is mandatory. You will also receive 2 stickers in your package with your race number on them. The small sticker should go on the front of your helmet. The bigger sticker will wrap around your bike frame. Road or mountain bikes are acceptable. For safety reasons, be sure to have end-caps on the end of your handle-bars.</string>
    <string name="what_to_bring_run_text">You must finish the race with your bib number on the front of you. Some people choose to pin it on at the beginning of the race and have it on for the whole event so they donít have to worry about it. Others pin it on a singlet that they put on once they finish the swim before they head out for the bike. Others use an elastic racing strap that they pin their bib number to and then quickly strap it on before they leave for the run. Use whatever option feels best for you. Remember to bring a change of clothing so you can enjoy the post-event festivities.</string>
    <string name="faq_answer_1">We currently adhere to the USAT Rules for Triathlon &amp; Duathlon. Important rules include no drafting, you must wear a helmet and music is ABSOLUTELY NOT allowed during the bike for obvious safety reasons.</string>
    <string name="faq_answer_2">Absolutely no music devices are allowed during the bike segment for obvious safety risks and will result in immediate disqualification.</string>
    <string name="faq_answer_3">During any running segments, we prefer for athletes to NOT use music devices to maximize safety, assure a fair competitive environment and assure athletes can hear all course marshal instructions. With that said, we also understand that many athletes rely on music to help endure the challenge of running. To accommodate the needs of our athletes while still assuring maximum safety and a fair, competitive environment, here is the arrangement that we can accommodate. If you chose to use a personal music device, you must always keep one ear open for instructions so only one ear-bud can be used at any time. In addition, if you opt to use music, you will not be eligible for awards, points and rankings. So as an athlete, you have to make a choiceÖmusic or awards/points/rankings. If you are using a personal music devise with two earbuds, you will be immediately disqualified. Trust us, we donít want to have to enforce a disqualification but in order to assure the safety of all athletes, this is a very important rule. We also request that if you chose to use a personal music device that you keep the volume to a minimum to assure all instructions can be heard.</string>
    <string name="faq_answer_4">No, you do not need to wear a wetsuit. Many will not wear a wetsuit while others will choose to wear a wetsuit because of the buoyancy and warmth factor. Do I have to use a road or racing bike? No. We welcome any type of bike as long as it is functioning properly with brakes and endcaps at the end of your handlebars.</string>
    <string name="faq_question_4">Do I need to wear a wetsuit?</string>
    <string name="faq_question_3">Can I use a personal music device while running?</string>
    <string name="faq_question_2">Can I use a personal music device while cycling?</string>
    <string name="faq_question_1">What are the Rules?</string>
    <string name="total">Total Cost:</string>
    <string name="note_context">Tech shirts guaranteed to pre-registered participants only.</string>
    <string name="packet_pickup">PACKET PICK UP</string>
    <string name="packet_pickup_text">All packet pick up will occur at Why Worry Racing, 123 NW Everett, Portland OR. \nPacket pick up hours: \n\u25BA Thursday 8&#8211;5 \n\u25BA Friday 9&#8211;noon\nNo day of event packet pick up.  </string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_title">Event Date:</string>
    <string name="more_info">More Information</string>
    <string name="about_event_title">ABOUT THE EVENT</string>
    <string name="about_event_text">The Annual Ace in the Hole MultiSport Weekend is a legendary event in the Oregon triathlon and running community. It has become a traditional destination race for athletes from across the nation.   There is something for every level of athletic ability. The weekend includes a first timer triathlon, a sprint, Olympic, and H, but make sure you come to have fun!</string>
    <string name="cost_include">Cost Includes:</string>
    <string name="cost_include_text"> \u25CF Food &amp; Beer\n\u25CF Access to the weekendís live entertainment &amp; Fitness Expo \n\u25CF Commemorative Finisher medal \n\u25CF Accurate Chip Timing for competitive races \n\u25CF Ace in the Hole MultiSport Weekend Tech Shirt \n\u25CF Post-event party &amp; entertainment></string>
    <string name="banner_6_description">A photo show three persons, one rumming, one swimming, one biking</string>
    <string name="which_day">For Which Day?</string>
    <string name="saturday_events">Saturday 12/16/2017:</string>
    <string name="sunday_events">Sunday 12/17/2017:</string>
    <string name="reset">Reset</string>
    <string name="required_text">All fields with * are required.</string>
</resources>
