<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/braden_collum_87875"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.pcc.alizanganeh.aihmultisportweekendapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/ace_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/mid_dp"
        android:background="@android:drawable/dialog_frame"
        android:padding="@dimen/mid_snd_dp"
        android:text="@string/ace_name"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/title_font"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ace_sndpart_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ace_name"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_frame"
        android:padding="@dimen/mid_snd_dp"
        android:text="@string/ace_sndpart_name"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/title_font"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ace_sndpart_name"

        android:layout_marginTop="@dimen/mid_snd_dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/width_col"
            android:layout_height="@dimen/height_col"
            android:layout_marginEnd="@dimen/mid_snd_dp"
            android:layout_marginStart="@dimen/mid_snd_dp"
            android:layout_weight="1"
            android:background="@drawable/round_white_background"

            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:radius="30dp">

            <TextView
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/min_dp"
                android:text="@string/saturday"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/long_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/long_course"
                android:textColor="@color/colorRed" />

            <TextView
                android:id="@+id/olympic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/olympic"
                android:textColor="@color/colorRed" />

            <TextView
                android:id="@+id/ten_k"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/ten_k"
                android:textColor="@color/colorRed" />

            <TextView
                android:id="@+id/half_marathon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/half_marathon"
                android:textColor="@color/colorRed" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/width_col"
            android:layout_height="@dimen/height_col"
            android:layout_marginEnd="@dimen/mid_snd_dp"
            android:layout_marginStart="@dimen/mid_snd_dp"
            android:layout_weight="1"
            android:background="@drawable/round_white_background"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/min_dp"
                android:text="@string/sunday"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/sprint"
                android:textColor="@color/colorRed" />

            <TextView
                android:id="@+id/try_a_tri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/min_dp"
                android:text="@string/try_a_tri"
                android:textColor="@color/colorRed" />

            <TextView
                android:id="@+id/splash_n_dash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/splash_n_dash"
                android:textColor="@color/colorRed" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/mid_snd_dp"
        android:background="@android:drawable/ic_notification_overlay"
        android:padding="@dimen/min_dp"
        android:text="@string/begin"
        android:textColor="@color/colorWhite" />
</RelativeLayout>
