<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.pcc.alizanganeh.aihmultisportweekendapp.FAQActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/min_dp"
        android:text="@string/faq"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/min_dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/banner_four" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:background="@color/colorRed">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/min_dp"
                android:background="@drawable/round_solid_white_background"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:id="@+id/q1_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_q1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/min_dp"
                        android:text="@string/faq_question_1"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/content_q1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/min_dp"
                        android:layout_weight="8"
                        android:text="@string/faq_answer_1"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/q2_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/q1_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_q2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/min_dp"
                        android:text="@string/faq_question_2"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/content_q2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/min_dp"
                        android:layout_weight="7"
                        android:text="@string/faq_answer_2"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/q3_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/q2_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_q3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/min_dp"
                        android:text="@string/faq_question_3"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/content_bike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/min_dp"
                        android:layout_weight="8"
                        android:text="@string/faq_answer_3"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/q4_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/q3_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_q4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/min_dp"
                        android:text="@string/faq_question_4"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/content_q4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/min_dp"
                        android:layout_weight="8"
                        android:scrollbars="vertical"
                        android:text="@string/faq_answer_4"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />
                </LinearLayout>

            </RelativeLayout>
        </ScrollView>


    </RelativeLayout>


</RelativeLayout>
