<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.pcc.alizanganeh.aihmultisportweekendapp.TryATriActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/min_dp"
        android:text="@string/try_a_tri"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/min_dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/banner_four" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:background="@color/colorRed">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/min_dp"
            android:background="@drawable/round_solid_white_background">

            <LinearLayout
                android:id="@+id/cost_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_cost"
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/cost"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="8"
                    android:text="$65"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/swim_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cost_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_swim"
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/swim"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_swim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/min_dp"
                    android:layout_weight="7"
                    android:text="@string/try_a_tri_swim_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bike_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/swim_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_bike"
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/bike"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_bike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/min_dp"
                    android:layout_weight="8"
                    android:text="@string/try_a_tri_bike_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/run_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bike_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_run"
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/run"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_run"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/min_dp"
                    android:layout_weight="8"
                    android:text="@string/try_a_tri_run_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
